--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="mapcontrol.js"></script>
+    <script src="marker.js"></script>
     <link rel="stylesheet" href="flex.css">
     <title>결과화면 창</title>
 </head>
@@ -31,13 +32,30 @@
 
                 Initialization(map);
                 DrawPolygon();
+                displayMarker(map);
             </script>
         </div>
         <div class="tourlist">
             <ul>
                 <script>
-                    for(var i = 0; i < 20; i++){
-                        document.write('<li><h3>추천 관광지 리스트 들어갈 부분</h3></li>')
+                    var imgArray = ['https://cdn.visitkorea.or.kr/img/call?cmd=VIEW&id=bafa5b52-1b62-44ad-8ef9-ec013189bf39',
+                                    'https://cdn.visitkorea.or.kr/img/call?cmd=VIEW&id=dc609ae0-a7d2-4b3b-abe4-77411f429954',
+                                    'https://cdn.visitkorea.or.kr/img/call?cmd=VIEW&id=bbe277e8-8e53-439a-98da-dcfdd44d7e1d',
+                                    'https://cdn.visitkorea.or.kr/img/call?cmd=VIEW&id=62270996-dbe4-46c5-b8dc-c9bb5769a5a9',
+                                    'https://cdn.visitkorea.or.kr/img/call?cmd=VIEW&id=3cdc6db3-4093-4d11-aebb-3a069a564ead']
+
+                    var titleArray = ['하이원 하늘길 트레킹', '김삿갓 계곡', '비수구미마을(비수구미계곡)', '백담사', '한탄강(국가지질공원, 고석정)']
+                    var siteUrlArray = ['https://korean.visitkorea.or.kr/detail/ms_detail.do?cotid=8feb05a8-cd93-4448-9e21-9688f7a32a0e',
+                                        'https://korean.visitkorea.or.kr/detail/ms_detail.do?cotid=b5b93faf-78ea-45d3-ab8c-9178bf542d10',
+                                        'https://korean.visitkorea.or.kr/detail/ms_detail.do?cotid=62221e79-5915-4947-b1b5-e1c78f126f85',
+                                        'https://korean.visitkorea.or.kr/detail/ms_detail.do?cotid=82e0a52e-ca51-4ed2-a087-c1ea1d769e65',
+                                        'https://korean.visitkorea.or.kr/detail/ms_detail.do?cotid=d1517b98-4af6-4623-b839-f03aa9dd7d1a']
+
+                    for(var i = 0; i < 4; i++){
+                        document.write('<li class="RecommandedSite">' +
+                                            '<img class="touriamge" src='+ imgArray[i] +' width="200" height="150"/>' +
+                                            '<a class="sitename" href='+ siteUrlArray[i] +'>'+ titleArray[i] +'</a>' +
+                                        '</li>')
                     }
                 </script>    
             </ul>
