--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div class="header">
             <span class="menubar">
                 <ul>
-                    <li><a href="#" class="home">home</a></li>
-                    <li><a href="#" class="about">about</a></li>
+                    <li><a href="mainpage/main_page.html" class="home">home</a></li>
+                    <li><a href="about.html" class="about">about</a></li>
                     <li><a href="#" class="products">products</a></li>
                     <li><a href="#" class="services">services</a></li>
                     <li><a href="#" class="form">forum</a></li>
