--- a/mainpage/main_page.html
+++ b/mainpage/main_page.html
@@ -71,20 +71,20 @@
             </section>
             <section>
                 <article>
-                    <h2>Ecotourism</h2>
-                    <p>This is iptsome descrion text for this panel.</p>
+                    <h2>생태 관광</h2>
+                    <p>아름다운 자연과 즐거운 체험이 있는 생태테마여행</p>
                 </article>
             </section>
             <section>
                 <article>
-                    <h2>Korean-style house</h2>
-                    <p>This is iptsome descrion text for this panel.</p>
+                    <h2>전통한옥</h2>
+                    <p>한국 고유의 전통문화를 체험할 수 있는 한옥 숙박시설</p>
                 </article>
             </section>
             <section>
                 <article>
-                    <h2>Priceless Experience</h2>
-                    <p>This is iptsome descrion text for this panel.</p>
+                    <h2>가치 있는 여행</h2>
+                    <p>일탈, 휴식, 재미, 누군가에겐 의미를 더하는 여행</p>
                 </article>
             </section>
             <section>
@@ -100,9 +100,14 @@
     
     <div class="info">
         <img src="우주공감.png">
-        <h1 class="service_name">서비스 이름</h1>
+        <br>
+        
         <h>
-            서비스 설명
+            우주공감은 한국관광품질인증제가 보장하는 관광시설을 바탕으로 만들어진 서비스입니다.
+            <br>
+            여행자 개개인이 추구하는 가치를 맞춤화하고, ~~~~~~~~하여 더욱더 가치 있는 여행으로 만들어주며
+            <br>
+            여행자가 생각하는 가치있는 여행을 중심으로 딱 맞는, 잊을 수 없는 경험을 선사해드립니다.
         </h>
     </div>
     <div class="input">
