--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 
                 var map = new kakao.maps.Map(container, options); //지도 생성 및 객체 리턴
 
-                Initialization(map);
-                DrawPolygon();
+                // Initialization(map);
+                // DrawPolygon();
             </script>
         </div>
         <div class="tourlist">
